--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <description>Nexus plugin providing Google Analytics services to Nexus.</description>
 
   <properties>
-    <nexus.version>1.10-SNAPSHOT</nexus.version>
+    <nexus.version>1.9.2.4</nexus.version>
   </properties>
 
   <dependencies>
@@ -40,6 +40,12 @@
       <artifactId>nexus-rest-api</artifactId>
       <version>${nexus.version}</version>
       <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -96,5 +102,19 @@
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>sonatype</id>
+      <url>https://repository.sonatype.org/content/groupds/forge/</url>
+    </repository>
+  </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>sonatype</id>
+      <url>https://repository.sonatype.org/content/groupds/forge/</url>
+    </pluginRepository>
+  </pluginRepositories>
 
 </project>
