--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,17 @@
       <id>sonatype</id>
       <url>https://repository.sonatype.org/content/groups/forge/</url>
     </repository>
+    <repository>
+      <id>sonatype-third-party</id>
+      <name>Sonatype Third Party Repository</name>
+      <url>http://repository.sonatype.org/content/repositories/third-party</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
   </repositories>
 
   <pluginRepositories>
