--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.sonatype.nexus.plugins</groupId>
-    <artifactId>nexus-plugins-parent</artifactId>
-    <version>8</version>
+    <groupId>org.sonatype.forge</groupId>
+    <artifactId>forge-parent</artifactId>
+    <version>30</version>
   </parent>
 
   <groupId>org.sonatype.nexus.plugins</groupId>
@@ -96,6 +96,7 @@
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
       <artifactId>nexus-plugin-api</artifactId>
+      <version>${nexus.version}</version>
       <scope>provided</scope>
     </dependency>
 
@@ -133,7 +134,6 @@
       <version>1.5.5</version>
       <scope>provided</scope>
     </dependency>
-
 
   </dependencies>
 
@@ -176,7 +176,17 @@
           </execution>
         </executions>
       </plugin>
+
+      <!--
+      Enables the 'nexus-plugin' packaging type, required to build Nexus plugins.
+      -->
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>app-lifecycle-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
     </plugins>
+
     <pluginManagement>
       <plugins>
         <plugin>
@@ -190,6 +200,19 @@
             <pushChanges>false</pushChanges>
             <localCheckout>true</localCheckout>
           </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.sonatype.plugins</groupId>
+          <artifactId>app-lifecycle-maven-plugin</artifactId>
+          <version>1.7</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.sonatype.plugins</groupId>
+              <artifactId>app-lifecycle-nexus</artifactId>
+              <version>1.7</version>
+            </dependency>
+          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
