--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -12,7 +11,7 @@
 
   <groupId>org.sonatype.nexus.plugins</groupId>
   <artifactId>nexus-google-analytics-plugin</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <packaging>nexus-plugin</packaging>
 
@@ -44,7 +43,7 @@
   <scm>
     <connection>scm:git:git@github.com:avelinsk/nexus-google-analytics-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:avelinsk/nexus-google-analytics-plugin.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>nexus-google-analytics-plugin-1.0.0</tag>
   </scm>
 
   <dependencies>
